--- a/src/App.css
+++ b/src/App.css
@@ -1,130 +1,336 @@
 /* App.css */
-
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
-  color: #333;
+  font-family: 'Calisto MT', serif;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .container {
   max-width: 800px;
-  margin: 50px auto;
-  background-color: #fff;
+  margin: 0 auto;
   padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  font-family: 'Calisto MT', serif;
+  font-size: 20px;
+  color: #0074d9;
+  transition: background-color 0.3s, color 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.title {
+  font-size: 36px;
+  font-weight: bold;
+  color: #0074d9;
   text-align: center;
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 40px;
+  transition: color 0.3s;
 }
-
-.input-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-input[type="text"] {
-  flex: 1;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  outline: none;
-}
-
-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 18px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.2s ease-in-out;
-}
-
-button:hover {
-  background-color: #0069d9;
-}
-
-label {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
-}
-
-input[type="checkbox"] {
-  margin-right: 5px;
-  cursor: pointer;
-}
-
-/* Results.css */
-
-.results-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-}
-
-.result-item {
-  position: relative;
-}
-
-.result-image,
-.result-video {
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-  object-fit: cover;
-}
-
-.clickable::after {
-  content: 'Click to open';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 12px;
-  color: #fff;
-  background-color: rgba(0, 123, 255, 0.7);
-  padding: 5px;
-  border-radius: 4px;
-  display: none;
-}
-
-.result-item:hover .clickable::after {
-  display: block;
-}
-
-/* ImageVideoToggle.css */
 
 .toggle-container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-bottom: 20px;
 }
 
-.toggle-label {
-  margin-right: 10px;
-}
-
-.toggle-button {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 10px;
-  border-radius: 4px;
+.dark-mode-toggle {
+  display: flex;
+  align-items: center;
+  width: 120px;
+  height: 30px;
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+  transform: translate3d(0, 0, 0);
+  background: #9A9999;
+  border-radius: 15px;
+  padding: 5px;
+  transition: background 0.2s ease;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
-.toggle-button:checked {
-  background-color: #eee;
+.dark-mode-toggle .toggle-text {
+  flex: 1;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  transition: color 0.3s;
 }
+
+.dark-mode-toggle .toggle-icon {
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease;
+}
+
+.dark-mode-toggle .toggle-icon:before {
+  content: "";
+  position: absolute;
+  display: block;
+  margin: -18px;
+  width: 56px;
+  height: 56px;
+  background: rgba(79, 46, 220, 0.5);
+  border-radius: 50%;
+  transform: scale(0);
+  opacity: 1;
+  pointer-events: none;
+}
+
+.dark-mode .dark-mode-toggle {
+  background: #947ADA;
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.1);
+}
+
+.dark-mode .dark-mode-toggle .toggle-icon {
+  background: #4F2EDC;
+  transform: translateX(80px);
+  transition: all 0.2s cubic-bezier(0.8, 0.4, 0.3, 1.25), background 0.15s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.dark-mode .dark-mode-toggle .toggle-icon:before {
+  transform: scale(1);
+  opacity: 0;
+  transition: all 0.4s ease;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+}
+
+.search-input {
+  width: 80%;
+  padding: 15px;
+  border: 2px solid #0074d9;
+  border-radius: 25px;
+  font-size: 18px;
+  outline: none;
+  margin-bottom: 10px;
+  transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.filter-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.filter-label {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  font-size: 20px;
+  color: #0074d9;
+  transition: color 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.filter-checkbox {
+  margin-right: 5px;
+  transform: scale(1.0);
+}
+
+.search-button {
+  width: 40%;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 25px;
+  background-color: #0074d9;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+}
+
+.results {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #0074d9;
+  border-radius: 20px;
+  padding: 10px;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.result-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.result-video {
+  width: 100%;
+  height: 200px;
+  border-radius: 15px;
+}
+
+.result-title {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #0074d9;
+  text-align: center;
+  transition: color 0.3s;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #0074d9;
+  transition: color 0.3s;
+}
+
+.dark-mode {
+  background-color: #333;
+  color: white;
+}
+
+.dark-mode .title,
+.dark-mode .filter-label,
+.dark-mode .search-input,
+.dark-mode .search-button,
+.dark-mode .result-title,
+.dark-mode .loading {
+  color: white;
+}
+
+.dark-mode .search-input {
+  border-color: white;
+  background-color: #333;
+}
+
+.dark-mode .result {
+  border-color: white;
+}
+
+.dark-mode .search-button {
+  background-color: white;
+  color: #333;
+}
+
+.checkbox-wrapper-13 input[type=checkbox] {
+  --active: #275EFE;
+  --active-inner: #fff;
+  --focus: 2px rgba(39, 94, 254, 0.3);
+  --border: #BBC1E1;
+  --border-hover: #275EFE;
+  --background: #fff;
+  --disabled: #F6F8FF;
+  --disabled-inner: #E1E6F9;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  height: 21px;
+  outline: none;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  margin: 0;
+  cursor: pointer;
+  border: 1px solid var(--bc, var(--border));
+  background: var(--b, var(--background));
+  transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.checkbox input[type=checkbox]:after {
+  content: "";
+  display: block;
+  left: 0;
+  top: 0;
+  position: absolute;
+  transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+}
+
+.checkbox input[type=checkbox]:checked {
+  --b: var(--active);
+  --bc: var(--active);
+  --d-o: 0.3s;
+  --d-t: 0.6s;
+  --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
+}
+
+.checkbox input[type=checkbox]:disabled {
+  --b: var(--disabled);
+  cursor: not-allowed;
+  opacity: 0.9;
+}
+
+.checkbox input[type=checkbox]:disabled:checked {
+  --b: var(--disabled-inner);
+  --bc: var(--border);
+}
+
+.checkbox input[type=checkbox]:disabled + label {
+  cursor: not-allowed;
+}
+
+.checkbox input[type=checkbox]:hover:not(:checked):not(:disabled) {
+  --bc: var(--border-hover);
+}
+
+.checkbox input[type=checkbox]:focus {
+  box-shadow: 0 0 0 var(--focus);
+}
+
+.checkbox input[type=checkbox]:not(.switch) {
+  width: 21px;
+}
+
+.checkbox input[type=checkbox]:not(.switch):after {
+  opacity: var(--o, 0);
+}
+
+.checkbox input[type=checkbox]:not(.switch):checked {
+  --o: 1;
+}
+
+.checkbox-wrapper-13 input[type=checkbox] + label {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  margin-left: 4px;
+  color: #0074d9; /* Adjust label color as needed */
+}
+
+.checkbox-wrapper-13 input[type=checkbox]:not(.switch) {
+  border-radius: 7px;
+}
+
+.checkbox-wrapper-13 input[type=checkbox]:not(.switch):after {
+  width: 5px;
+  height: 9px;
+  border: 2px solid var(--active-inner);
+  border-top: 0;
+  border-left: 0;
+  left: 7px;
+  top: 4px;
+  transform: rotate(var(--r, 20deg));
+}
+
+.checkbox-wrapper-13 input[type=checkbox]:not(.switch):checked {
+  --r: 43deg;
+}
+
