--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 /* App.css */
-body {
-  font-family: 'Calisto MT', serif;
-  transition: background-color 0.3s, color 0.3s;
-}
 
 .container {
   max-width: 800px;
@@ -10,18 +6,51 @@ body {
   padding: 20px;
   font-family: 'Calisto MT', serif;
   font-size: 20px;
-  color: #0074d9;
+  color: #080808;
   transition: background-color 0.3s, color 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+  color: #000000;
+  text-align: center;
+  transition: color 0.3s;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Set your shadow color and size */
 }
 
 .title {
   font-size: 36px;
   font-weight: bold;
-  color: #0074d9;
+  color: #000000;
   text-align: center;
   transition: color 0.3s;
+  font-family: 'Calisto MT', serif;
+  text-transform: uppercase;
+  letter-spacing: 2px; 
+  margin-bottom: 20px;
+  position: relative;
+  display: inline-block;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Set your shadow color and size */
 }
+
+.title::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000000; /* Set your hover line color */
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.title:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
 
 .toggle-container {
   display: flex;
@@ -68,7 +97,7 @@ body {
   margin: -18px;
   width: 56px;
   height: 56px;
-  background: rgba(79, 46, 220, 0.5);
+  background: rgba(5, 5, 5, 0.5);
   border-radius: 50%;
   transform: scale(0);
   opacity: 1;
@@ -76,12 +105,12 @@ body {
 }
 
 .dark-mode .dark-mode-toggle {
-  background: #947ADA;
+  background: #adadad;
   box-shadow: 0 0 2px rgba(255, 255, 255, 0.1);
 }
 
 .dark-mode .dark-mode-toggle .toggle-icon {
-  background: #4F2EDC;
+  background: #f5f4f7;
   transform: translateX(80px);
   transition: all 0.2s cubic-bezier(0.8, 0.4, 0.3, 1.25), background 0.15s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -104,7 +133,7 @@ body {
 .search-input {
   width: 80%;
   padding: 15px;
-  border: 2px solid #0074d9;
+  border: 2px solid #000000;
   border-radius: 25px;
   font-size: 18px;
   outline: none;
@@ -124,7 +153,7 @@ body {
   align-items: center;
   margin-right: 15px;
   font-size: 20px;
-  color: #0074d9;
+  color: #000000;
   transition: color 0.3s;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
@@ -139,7 +168,7 @@ body {
   padding: 15px 30px;
   border: none;
   border-radius: 25px;
-  background-color: #0074d9;
+  background-color: #000000;
   color: white;
   font-size: 20px;
   font-weight: bold;
@@ -149,7 +178,7 @@ body {
 }
 
 .search-button:hover {
-  background-color: #0056b3;
+  background-color: #5b6064;
 }
 
 .results {
@@ -180,6 +209,7 @@ body {
 .result-video {
   width: 100%;
   height: 200px;
+  object-fit: cover;
   border-radius: 15px;
 }
 
@@ -187,7 +217,7 @@ body {
   margin-top: 10px;
   font-size: 18px;
   font-weight: bold;
-  color: #0074d9;
+  color: #0f0f0f;
   text-align: center;
   transition: color 0.3s;
 }
@@ -199,7 +229,7 @@ body {
   height: 300px;
   font-size: 24px;
   font-weight: bold;
-  color: #0074d9;
+  color: #000000;
   transition: color 0.3s;
 }
 
@@ -230,107 +260,3 @@ body {
   background-color: white;
   color: #333;
 }
-
-.checkbox-wrapper-13 input[type=checkbox] {
-  --active: #275EFE;
-  --active-inner: #fff;
-  --focus: 2px rgba(39, 94, 254, 0.3);
-  --border: #BBC1E1;
-  --border-hover: #275EFE;
-  --background: #fff;
-  --disabled: #F6F8FF;
-  --disabled-inner: #E1E6F9;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  height: 21px;
-  outline: none;
-  display: inline-block;
-  vertical-align: top;
-  position: relative;
-  margin: 0;
-  cursor: pointer;
-  border: 1px solid var(--bc, var(--border));
-  background: var(--b, var(--background));
-  transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-
-.checkbox input[type=checkbox]:after {
-  content: "";
-  display: block;
-  left: 0;
-  top: 0;
-  position: absolute;
-  transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
-}
-
-.checkbox input[type=checkbox]:checked {
-  --b: var(--active);
-  --bc: var(--active);
-  --d-o: 0.3s;
-  --d-t: 0.6s;
-  --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
-}
-
-.checkbox input[type=checkbox]:disabled {
-  --b: var(--disabled);
-  cursor: not-allowed;
-  opacity: 0.9;
-}
-
-.checkbox input[type=checkbox]:disabled:checked {
-  --b: var(--disabled-inner);
-  --bc: var(--border);
-}
-
-.checkbox input[type=checkbox]:disabled + label {
-  cursor: not-allowed;
-}
-
-.checkbox input[type=checkbox]:hover:not(:checked):not(:disabled) {
-  --bc: var(--border-hover);
-}
-
-.checkbox input[type=checkbox]:focus {
-  box-shadow: 0 0 0 var(--focus);
-}
-
-.checkbox input[type=checkbox]:not(.switch) {
-  width: 21px;
-}
-
-.checkbox input[type=checkbox]:not(.switch):after {
-  opacity: var(--o, 0);
-}
-
-.checkbox input[type=checkbox]:not(.switch):checked {
-  --o: 1;
-}
-
-.checkbox-wrapper-13 input[type=checkbox] + label {
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-  margin-left: 4px;
-  color: #0074d9; /* Adjust label color as needed */
-}
-
-.checkbox-wrapper-13 input[type=checkbox]:not(.switch) {
-  border-radius: 7px;
-}
-
-.checkbox-wrapper-13 input[type=checkbox]:not(.switch):after {
-  width: 5px;
-  height: 9px;
-  border: 2px solid var(--active-inner);
-  border-top: 0;
-  border-left: 0;
-  left: 7px;
-  top: 4px;
-  transform: rotate(var(--r, 20deg));
-}
-
-.checkbox-wrapper-13 input[type=checkbox]:not(.switch):checked {
-  --r: 43deg;
-}
-
