--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  font-family: 'Raleway',sans-serif ;
+  font-family: 'Noe Display Bold', monospace;
   font-size: 20px;
   color: #080808;
   transition: background-color 0.3s, color 0.3s;
-  font-weight: bold;
+  font-weight:bolder;
   color: #000000;
   text-align: center;
   transition: color 0.3s;
@@ -16,7 +16,57 @@
   letter-spacing: 2px;
 }
 
+.results {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #0074d9;
+  border-radius: 20px;
+  padding: 10px;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.result-video,
+.result-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.result-title {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #0f0f0f;
+  text-align: center;
+  transition: color 0.3s;
+}
+
+.results-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
 .result-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #050505;
+  border-radius: 20px;
+  padding: 10px;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s; /* Added transform transition */
 }
 
@@ -27,12 +77,12 @@
 
 .title {
   font-size: 36px;
-  font-weight: bold;
+  font-weight: bolder;
   color: #000000;
   text-align: center;
   transition: color 0.3s;
-  font-family:'Raleway',sans-serif;
-  font-weight: bold;
+  font-family: 'Noe Display Bold', monospace;
+  font-weight: bolder;
   text-transform: uppercase;
   letter-spacing: 2px; 
   margin-bottom: 20px;
@@ -84,9 +134,9 @@
 .dark-mode-toggle .toggle-text {
   flex: 1;
   text-align: center;
-  font-size: 15px;
+  font-size: 15.5px;
   color: #fff;
-  font-family: 'Raleway',sans-serif ;
+  font-family: 'Noe Display Bold', monospace;
   font-weight: bold;
   transition: color 0.3s;
 }
@@ -152,6 +202,26 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
+.search-button {
+  width: 40%;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 25px;
+  background-color: #000000;
+  color: white;
+  font-size: 20px;
+  font-family: 'Noe Display Bold', monospace;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.search-button:hover {
+  background-color: #5b6064;
+}
+
+
 .filter-container {
   display: flex;
   align-items: center;
@@ -173,64 +243,6 @@
   transform: scale(1.25);
 }
 
-.search-button {
-  width: 40%;
-  padding: 15px 30px;
-  border: none;
-  border-radius: 25px;
-  background-color: #000000;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-}
-
-.search-button:hover {
-  background-color: #5b6064;
-}
-
-.results {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
-  margin-top: 20px;
-}
-
-.result {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 2px solid #0074d9;
-  border-radius: 20px;
-  padding: 10px;
-  transition: border-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-}
-
-.result-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 15px;
-}
-
-.result-video {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 15px;
-}
-
-.result-title {
-  margin-top: 10px;
-  font-size: 18px;
-  font-weight: bold;
-  color: #0f0f0f;
-  text-align: center;
-  transition: color 0.3s;
-}
 
 .loading {
   display: flex;
@@ -269,4 +281,38 @@
 .dark-mode .search-button {
   background-color: white;
   color: #333;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  padding: 10px;
+  margin: 0 5px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #000000;
+  color: white;
+  font-size: 12px;
+  font-family: 'Noe Display Bold', monospace;
+  font-weight: bold;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+  
+}
+
+.pagination button:hover {
+  background-color: #5b6064;
+  color: white;
+  border-color: #5b6064;
+}
+
+.pagination button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
