--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 /* App.css */
 
+/* General Styles */
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 800px;
   margin: 0 auto;
@@ -8,7 +15,7 @@
   font-size: 20px;
   color: #080808;
   transition: background-color 0.3s, color 0.3s;
-  font-weight:bolder;
+  font-weight: bolder;
   color: #000000;
   text-align: center;
   transition: color 0.3s;
@@ -16,65 +23,7 @@
   letter-spacing: 2px;
 }
 
-.results {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
-  margin-top: 20px;
-}
-
-.result {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 2px solid #0074d9;
-  border-radius: 20px;
-  padding: 10px;
-  transition: border-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-}
-
-.result-video,
-.result-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 15px;
-}
-
-.result-title {
-  margin-top: 10px;
-  font-size: 18px;
-  font-weight: bold;
-  color: #0f0f0f;
-  text-align: center;
-  transition: color 0.3s;
-}
-
-.results-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
-  margin-top: 20px;
-}
-
-.result-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 2px solid #050505;
-  border-radius: 20px;
-  padding: 10px;
-  transition: border-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s; /* Added transform transition */
-}
-
-.result-item:hover {
-  transform: scale(1.05); /* Scale on hover */
-  
-}
-
+/* Title Styles */
 .title {
   font-size: 36px;
   font-weight: bolder;
@@ -84,11 +33,10 @@
   font-family: 'Noe Display Bold', monospace;
   font-weight: bolder;
   text-transform: uppercase;
-  letter-spacing: 2px; 
+  letter-spacing: 2px;
   margin-bottom: 20px;
   position: relative;
   display: inline-block;
-   
 }
 
 .title::before {
@@ -98,7 +46,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #000000; 
+  background-color: #000000;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out;
@@ -109,7 +57,7 @@
   transform: scaleX(1);
 }
 
-
+/* Dark Mode Toggle Styles */
 .toggle-container {
   display: flex;
   justify-content: flex-end;
@@ -182,6 +130,7 @@
   transition: all 0.4s ease;
 }
 
+/* Search Form Styles */
 .search-form {
   display: flex;
   flex-direction: column;
@@ -201,26 +150,6 @@
   transition: border-color 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
-
-.search-button {
-  width: 40%;
-  padding: 15px 30px;
-  border: none;
-  border-radius: 25px;
-  background-color: #000000;
-  color: white;
-  font-size: 20px;
-  font-family: 'Noe Display Bold', monospace;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-}
-
-.search-button:hover {
-  background-color: #5b6064;
-}
-
 
 .filter-container {
   display: flex;
@@ -243,7 +172,71 @@
   transform: scale(1.25);
 }
 
+.search-button {
+  width: 40%;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 25px;
+  background-color: #000000;
+  color: white;
+  font-size: 20px;
+  font-family: 'Noe Display Bold', monospace;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
 
+.search-button:hover {
+  background-color: #5b6064;
+}
+
+/* Results Container Styles */
+.results-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.result-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #050505;
+  border-radius: 20px;
+  padding: 10px;
+  transition: border-color 0.3s, box-shadow 0.3s, transform 0.3s;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+.result-item:hover {
+  transform: scale(1.05);
+}
+
+.result-video,
+.result-image {
+  width: 100%;
+  height: 200px; /* Set a fixed height for images */
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.result-title {
+  margin-top: 10px;
+  font-size: 12px; /* Reduce font size for better fit */
+  font-weight: bold;
+  color: #0f0f0f;
+  text-align: center;
+  transition: color 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Limit the number of lines to 3 */
+  -webkit-box-orient: vertical;
+}
+
+/* Loading Styles */
 .loading {
   display: flex;
   justify-content: center;
@@ -255,6 +248,7 @@
   transition: color 0.3s;
 }
 
+/* Dark Mode Styles */
 .dark-mode {
   background-color: #333;
   color: white;
@@ -283,6 +277,7 @@
   color: #333;
 }
 
+/* Pagination Styles */
 .pagination {
   display: flex;
   justify-content: center;
@@ -303,7 +298,6 @@
   font-weight: bold;
   transition: background-color 0.3s, box-shadow 0.3s;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
-  
 }
 
 .pagination button:hover {
@@ -315,4 +309,20 @@
 .pagination button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
+}
+
+/* Responsive Styles */
+@media only screen and (max-width: 600px) {
+  .container {
+    padding: 10px;
+  }
+
+  .search-input {
+    width: 100%;
+  }
+
+  .search-button,
+  .dark-mode-toggle {
+    width: 100%;
+  }
 }
